--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,8 @@ main{
     height: 100%;
     margin: 0;
     padding: 0;
-    border-radius: 12px;
+    border-radius: 8px;
+    align-content: center;
 }
 
 footer{
